--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha test",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha test --recursive -- -u exports -R spec",
     "coverage-start": "istanbul cover node_modules/mocha/bin/_mocha test --recursive -- -u exports -R spec && start coverage/lcov-report/index.html",
-    "jshint": "jshint ./lib/api_registry.js"
+    "jshint": "jshint ./lib",
+    "jscs": "jscs -p google ./lib"
   },
   "repository": {
     "type": "git",
